# Photon-Processes

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  Photon-Process.sh  PhotonProcess.pc.in  PhotonProcessConfig.cmake.in  README.md
DataTables/: BreitWheeler_diff.h5  ComptonScatter_diff.h5  ComptonScatter_total.h5  PhotonScatter_diff.h5  PhotonScatter_total.h5
Source/Fields/: BlackBody.cpp  BlackBody.hh  Gaussian.cpp  Gaussian.hh  Laser.cpp  Laser.hh  PhotonField.hh  PointSource.cpp  PointSource.hh  UserDefinedField.cpp  UserDefinedField.hh
Source/Fileds/: BlackBody.cpp  BlackBody.hh  PhotonField.hh
Source/GaussianProcess/: GaussianProcess.cpp  GaussianProcess.hh
Source/Processes/: BreitWheeler.cpp  BreitWheeler.hh  ComptonScatter.cpp  ComptonScatter.hh  PhotonProcess.cpp  PhotonProcess.hh  PhotonScatter.cpp  PhotonScatter.hh
Source/Tools/: GaussianProcess.cpp  GaussianProcess.hh  Matrix.hh  Numerics.cpp  Numerics.hh  Vector.hh
